--- a/MammyDictionary/app/src/main/res/layout/fragment_home.xml
+++ b/MammyDictionary/app/src/main/res/layout/fragment_home.xml
@@ -54,5 +54,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_meaning_word"
+        android:layout_width="410dp"
+        android:layout_height="429dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_add_word" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
