--- a/MammyDictionary/app/src/main/res/layout/fragment_home.xml
+++ b/MammyDictionary/app/src/main/res/layout/fragment_home.xml
@@ -7,19 +7,17 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout"
-        android:layout_width="394dp"
-        android:layout_height="85dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="23dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:hint="Type a word"
         app:counterEnabled="true"
         app:counterMaxLength="45"
         app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/button_add_word"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/text_input_word"
@@ -27,7 +25,6 @@
             android:layout_height="45dp"
             android:layout_marginStart="63dp"
             android:layout_marginLeft="63dp"
-            android:layout_marginTop="160dp"
             android:layout_marginEnd="63dp"
             android:layout_marginRight="63dp"
             android:inputType="text"
@@ -38,29 +35,28 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_add_word"
-        android:layout_width="154dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="163dp"
-        android:layout_marginLeft="163dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="164dp"
-        android:layout_marginRight="164dp"
-        android:layout_marginBottom="483dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:background="@color/colorPrimary"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:text="Find"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_view_meaning_word"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_meaning_word"
-        android:layout_width="410dp"
-        android:layout_height="429dp"
-        android:layout_marginTop="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_add_word" />
 
