--- a/MammyDictionary/app/src/main/res/layout/fragment_addition.xml
+++ b/MammyDictionary/app/src/main/res/layout/fragment_addition.xml
@@ -3,13 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="?attr/actionBarSize">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Type a word"
+        android:textColorHint="@color/darkPurple"
+        android:textColorHighlight="@color/brightBackgroundHint"
         app:counterEnabled="true"
         app:counterMaxLength="45"
         app:errorEnabled="true"
@@ -28,6 +31,7 @@
             android:layout_marginEnd="63dp"
             android:layout_marginRight="63dp"
             android:inputType="text"
+            android:textColor="@color/brightBackgroundText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,12 +43,12 @@
         android:id="@+id/button_add_word"
         android:layout_width="150dp"
         android:layout_height="45dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/darkPurple"
         android:textAlignment="center"
         android:gravity="center"
         android:text="Find"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-        android:textColor="#ffffff"
+        android:textColor="@color/darkestBlack"
         app:layout_constraintBottom_toTopOf="@+id/recycler_view_meaning_word"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
