View adjusted.(Recycler View, Counter, Home Page)

--- a/MammyDictionary/app/src/main/res/layout/fragment_addition.xml
+++ b/MammyDictionary/app/src/main/res/layout/fragment_addition.xml
@@ -13,8 +13,10 @@
         android:hint="Type a word"
         android:textColorHint="@color/darkPurple"
         android:textColorHighlight="@color/brightBackgroundHint"
+        app:boxStrokeColor="@color/darkPurple"
         app:counterEnabled="true"
         app:counterMaxLength="45"
+        app:counterTextAppearance="@style/CounterStyle"
         app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/button_add_word"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,6 +34,7 @@
             android:layout_marginRight="63dp"
             android:inputType="text"
             android:textColor="@color/brightBackgroundText"
+            android:textColorHint="@color/darkPurple"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
