--- a/MammyDictionary/app/src/main/res/values/styles.xml
+++ b/MammyDictionary/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="CounterStyle" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">@color/darkPurple</item>
+    </style>
+
 </resources>
