View adjusted.(Word Addition Page) Daily Words View created.

--- a/MammyDictionary/app/src/main/res/layout/fragment_addition.xml
+++ b/MammyDictionary/app/src/main/res/layout/fragment_addition.xml
@@ -28,13 +28,16 @@
             android:id="@+id/text_input_word"
             android:layout_width="284dp"
             android:layout_height="45dp"
-            android:layout_marginStart="63dp"
-            android:layout_marginLeft="63dp"
-            android:layout_marginEnd="63dp"
-            android:layout_marginRight="63dp"
+            android:layout_marginStart="55dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="55dp"
             android:inputType="text"
+            android:outlineAmbientShadowColor="@color/darkPurple"
+            android:outlineSpotShadowColor="@color/darkPurple"
             android:textColor="@color/brightBackgroundText"
+            android:textColorHighlight="@color/darkPurple"
             android:textColorHint="@color/darkPurple"
+            android:textColorLink="@color/darkPurple"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +52,7 @@
         android:background="@color/darkPurple"
         android:textAlignment="center"
         android:gravity="center"
-        android:text="Find"
+        android:text="FIND"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
         android:textColor="@color/darkestBlack"
         app:layout_constraintBottom_toTopOf="@+id/recycler_view_meaning_word"
