--- a/MammyDictionary/app/src/main/res/layout/word_meaning_row.xml
+++ b/MammyDictionary/app/src/main/res/layout/word_meaning_row.xml
@@ -13,6 +13,7 @@
         android:id="@+id/word_meaning"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textColor="@color/brightBackgroundText"/>
 
 </LinearLayout>
